[package]
name = "blog"
version = "0.1.0"
authors = ["piaoliu <441594700@qq.com>"]

[dependencies]
 dotenv = "^0.10.0"
 serde = "^1.0.17"
 serde_json = "^1.0.5"
 serde_derive = "^1.0.17"
 sapper = "^0.1"
 sapper_std = "^0.1"
 rand = "^0.4"
 tiny-keccak = "^1.3.1"
 comrak = "^0.2.4"
 redis = '^0.8.0'
 r2d2 = '^0.8.1'
 r2d2_redis = '^0.7.0'
 ammonia = "^1.1.0"
 hyper-native-tls = "^0.2.4"
 hyper = "^0.10.13"
 serde_urlencoded = "^0.5.1"

[dependencies.diesel]
features = ["postgres", "chrono", "uuid", "r2d2"]
version = "^1.1.1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel_infer_schema]
features = ["postgres"]
version = "^1.1.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.5.0"

[dependencies.clippy]
optional = true
version = "*"

[patch.crates-io]
sapper_std = { git = 'https://github.com/sappworks/sapper_std.git' }
sapper_tmpl = { git = 'https://github.com/sappworks/sapper_tmpl.git' }

[features]
default = []
monitor = ["sapper_std/monitor"]
