[package]
name = "new_blog"
version = "0.1.0"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "uuid", "postgres", "chrono", "offline"] }
tokio = { version = "1.0", features = ["full"] }
redis = { version = "0.21.0", features = ["tokio-comp", "connection-manager"] }
futures = "0.3"
once_cell = "1.7.2"
reqwest = { version = "0.11.2", features = ["json", "rustls-tls"], default-features= false }
serde_urlencoded = "0.7.0"
url = "2"
salvo = { version = "0.21", features = ["serve-static"] }
tera = "1"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

rss = "1"
pulldown-cmark = { version = "0.8", features = ["simd"] }
rand = "0.8"
tiny-keccak = { version = "2.0.0", features = ["sha3"] }
time = "0.3"

chrono = { version = "0.4.19", features = ["serde"]}
dotenv = "^0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["rc"] }

[profile.release]
debug = false
lto = true
codegen-units = 1

# [patch.crates-io]
# salvo = { version = "0.16", path = "../salvo", features = ["serve"] }
